# mailing_service

./: .env.sample  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
mailapp/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailapp/management/commands/: start_mailing.py
mailapp/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_alter_mailingattempt_date_mailing_and_more.py  0004_mailing_owner_alter_mailing_end_time.py  0005_alter_mailing_options_alter_recipientmail_options.py  0006_mailmessage_owner_recipientmail_owner.py  0007_mailingattempt_owner.py  0008_alter_mailing_end_time.py  0009_alter_mailing_options_alter_recipientmail_options.py  0010_alter_mailing_options_alter_recipientmail_options.py  0011_alter_recipientmail_options.py
mailapp/templates/includes/: inc_menu.html
mailapp/templates/mailapp/: base.html  index.html  mail_message_confirm_delete.html  mail_message_detail.html  mail_message_list.html  mailing_attempt_list.html  mailing_detail.html  mailing_form.html  mailing_list.html  recipient_mail_detail.html  recipient_mail_form.html  recipient_mail_list.html
mailapp/templates/mailapp/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_admin.py  create_group_manager.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_verification_token.py  0004_alter_user_options.py
users/templates/users/: login.html  profile_detail.html  reset_password.html
