[tool.poetry]
name = "djangocoursework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
django = "^5.1.5"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
email-validator = "^2.2.0"
pillow = "^11.1.0"
ipython = "^8.32.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119